fixing overflow in card containers

--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -56,6 +56,35 @@ $white: rgba(255,255,255,1);
     @media (min-width: 1800px) { @content; }
 }
 
+/* width */
+::-webkit-scrollbar {
+    background: rgba(255,255,255,0.2);
+    width: 10px;
+    border-radius: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: rgba(255,255,255,0.0);;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(255,255,255,0.8);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(255,255,255,0.2);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(255,255,255,0.2);
+}
+
 @import 'mixins.scss';
 @import 'site-nav.scss';
 @import 'cards.scss';
@@ -140,7 +169,6 @@ header {
         border-radius: $contentBorderRadius*2;
         min-height: 72vh;
         max-height: 72vh;
-        overflow-y: scroll;
         background-color: $bodyThemeDark;
         color: white;
         display: block;
@@ -148,7 +176,6 @@ header {
             margin-bottom: .5rem;
         }
         article {
-            overflow-y: scroll;
             display: block;
             min-width: 15%;
             margin: 1em 2em;
@@ -158,6 +185,7 @@ header {
             text-align: center;
             text-shadow: $textShadow;
             width: 100%;
+            margin: 0.25em;
             &:before {
                 content: " ";
                 filter: $imageShadow;
@@ -167,16 +195,17 @@ header {
                 min-height: 100%;
                 background-repeat: no-repeat;
                 background-size: cover;
-                margin: 0.5em auto;
+                margin: 0em auto 0.5em;
                 background-image: url("../img/icon.png");
             }
         }
         .container {
-            padding: 1em 0;
+            padding: 0;
             display: block;
             position: relative;
-            overflow-y: scroll;
-            max-height: 71vh;
+            max-height: 65vh;
+            overflow-y: auto;
+            overflow-x: hidden;
         }
     }
     .bottom-title {
